Archive2/e0/deb8f51dd53738/output
main.cpp: In function ‘main’:
main.cpp:8:9: error: ISO C90 forbids mixed declarations and code [-Wpedantic]
         int a = scanf( "%d", &password );
         ^
main.cpp:12:17: error: ISO C90 forbids mixed declarations and code [-Wpedantic]
                 int b = scanf( "%d", &question );
                 ^
main.cpp:12:21: warning: unused variable ‘b’ [-Wunused-variable]
                 int b = scanf( "%d", &question );
                     ^
main.cpp:8:13: warning: unused variable ‘a’ [-Wunused-variable]
         int a = scanf( "%d", &password );
             ^
